docs/references/1.2.x/models/deployment.md
# Deployment

Deployment

## Properties

| Name | Type | Description |
|------|------|-------------|
| $id | string | Deployment ID. |
| $createdAt | string | Deployment creation date in ISO 8601 format. |
| $updatedAt | string | Deployment update date in ISO 8601 format. |
| resourceId | string | Resource ID. |
| resourceType | string | Resource type. |
| entrypoint | string | The entrypoint file to use to execute the deployment code. |
| size | integer | The code size in bytes. |
| buildId | string | The current build ID. |
| activate | boolean | Whether the deployment should be automatically activated. |
| status | string | The deployment status. Possible values are "processing", "building", "pending", "ready", and "failed". |
| buildStdout | string | The build stdout. |
| buildStderr | string | The build stderr. |
| buildTime | integer | The current build time in seconds. |

## Example

### REST

```json
{}
```

### GraphQL

```json
{}
```

